Update 'go-rmajrulo' component image to: quay.io/rhtap_qe/go-rmajrulo:01ca275f2d9a7d38b2d0b3a41b6917f2a93f33b8@sha256:d184e8f8c6cf211d42f471d585a1f2a1de5e3bf53ee567ef9cbb01f3f4f5422d

--- a/components/go-rmajrulo/overlays/development/deployment-patch.yaml
+++ b/components/go-rmajrulo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rmajrulo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rmajrulo:01ca275f2d9a7d38b2d0b3a41b6917f2a93f33b8@sha256:d184e8f8c6cf211d42f471d585a1f2a1de5e3bf53ee567ef9cbb01f3f4f5422d
+          name: container-image
